--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "dotenv": "^6.0.0",
     "express": "^4.16.3",
     "express-handlebars": "^3.0.0",
+    "materialize-css": "^1.0.0-rc.2",
     "mysql2": "^1.5.3",
     "sequelize": "^4.38.0"
   },
