updated eslintrc. changed var to const in models

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,13 +1,10 @@
 {
     "env": {
+    "es6": true,
     "browser": true,
     "commonjs": true,
     "node": true
     },
-    "extends": "prettier",
-    "plugins": [
-    "prettier"
-    ],
     "rules": {
     "no-duplicate-case": "error",
     "no-empty": "error",
@@ -24,20 +21,16 @@
     "camelcase": "error",
     "indent": [
     "error",
-    2
+    "tab"
     ],
-    "linebreak-style": [
-    "error",
-    "windows"
-    ],
+    "linebreak-style": 0,
     "quotes": [
     "error",
-    "prefer-single"
+    "single"
     ],
     "semi": [
     "error",
     "always"
-    ],
-    "prettier/prettier": "error"
+    ]
     }
-    }
+}
