removed my pw from congif

--- a/config/config.json
+++ b/config/config.json
@@ -4,7 +4,7 @@
     "password": "mysql",
     "database": "restaurantDB",
     "host": "localhost",
-    "dialect": "mysql"
+    "dialect": ""
   },
   "test": {
     "username": "root",
