--- a/config/config.json
+++ b/config/config.json
@@ -2,14 +2,14 @@
   "development": {
     "username": "root",
     "password": "",
-    "database": "restaurantDB",
+    "database": "restaurantdb",
     "host": "localhost",
     "dialect": "mysql"
   },
   "test": {
     "username": "root",
     "password": "",
-    "database": "restaurantTestDB",
+    "database": "restaurantTestdb",
     "host": "localhost",
     "dialect": "mysql",
     "logging": false
