--- a/package.json
+++ b/package.json
@@ -15,8 +15,9 @@
     "dotenv": "^6.0.0",
     "express": "^4.16.3",
     "express-handlebars": "^3.0.0",
+    "global": "^4.3.2",
     "materialize-css": "^1.0.0-rc.2",
-    "mysql2": "^1.5.3",
+    "mysql2": "^1.6.1",
     "sequelize": "^4.38.0"
   },
   "devDependencies": {
