--- a/config/config.json
+++ b/config/config.json
@@ -1,15 +1,15 @@
 {
   "development": {
     "username": "root",
-    "password": "",
+    "password": null,
     "database": "restaurantdb",
     "host": "localhost",
     "dialect": "mysql"
   },
   "test": {
     "username": "root",
-    "password": "",
-    "database": "restaurantTestdb",
+    "password": null,
+    "database": "testdb",
     "host": "localhost",
     "dialect": "mysql",
     "logging": false
